2003-07-21  Arafat Medini  <lumina@silverpen.de>

	* ar.po: Added "ar" Arabic to ALL_LINGUAS

2003-07-01  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS

2003-06-26  Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

2003-06-07  Havoc Pennington  <hp@pobox.com>

	* src/window.c (meta_window_notify_focus): drop the mouse button
	grabs for the focused window; we'll see if this breaks anything. 
	It should fix #102209

2003-05-21  Havoc Pennington  <hp@pobox.com>

	* NEWS: update

	* configure.in: 2.4.55

2003-05-20  Havoc Pennington  <hp@pobox.com>
	
	* src/keybindings.c (meta_change_keygrab): the mask 
	display->ignored_modifier_mask wasn't being bound, 
	due to "<" instead of "<=" (most people didn't notice
	as display->ignored_modifier_mask included Scroll_Lock).
	Red Hat bugzilla #91301 reported by Youssef Makki

	* src/display.c (meta_change_button_grab): make corresponding
	change for button grabs.

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

Fri Mar 28 15:39:35 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* src/window.c (update_resize): Don't cap refresh rate.  Fixes
	problem with my last commit, where the window could get stuck with
	a wrong size until you released the button.

Fri Mar 28 14:13:37 2003  Soeren Sandmann  <sandmann@daimi.au.dk>
 	
	* src/window.c (update_resize): Only cap refresh rate when not
	using SYNC. Remove bogus update-if-we-moved-more-than-a-delta.
 
	* src/window.c (update_move): Don't cap refresh rate during
	moves. Remove bogus update-if-we-moved-more-than-a-delta.
 
Sun Mar 23 23:10:42 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* src/display.c (meta_spew_event): just return if we are not
	verbose

2003-03-11  Havoc Pennington  <hp@pobox.com>

	Should fix #108108, #106217, tracked down by Owen Taylor and
	Frederic Crozat
	